修复子弹抖动 & 一些其他优化